<resources>
    <string name="app_name">Fishing_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="middle_value">Средний</string>
    <string name="mine_text_size">Размер текста</string>
    <string name="mine_text_size_settings">Настройки текста</string>
    <string name="button_start">Start</string>
    <string name="fish">Рыба</string>
    <string name="staff">Снасти</string>
    <string name="lure">Наживка</string>
    <string name="history">Рыбацкие истории</string>
    <string name="advice">Полезные советы</string>
    <string name="fish_1">Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.
    </string>
    <string name="fish_2">Рыба 2
    лавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев</string>
    <string name="fish_3">Раба 3
    лавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев</string>
    <string name="fish_4">Рыба 4
    лавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев</string>
    <string name="fish_5">Рыба 5
    лавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4].
Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6].
Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).
Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев</string>
</resources>